--- a/src/routes/private/video/styles.css
+++ b/src/routes/private/video/styles.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(6, auto);
-  grid-template-areas: 
+  grid-template-areas:
     "player"
     "title"
     "details"
@@ -10,14 +10,57 @@
     "related"
     "comments";
   max-width: 105rem;
-  padding-inline: 7rem 2rem;
+  padding: var(--header-height) 2rem 0 2rem;
   column-gap: 1.5rem;
-  margin-block: var(--header-height) 0;
-  margin-inline: auto;
+  margin: 0 auto;
+}
+
+.video__related-list {
+  display: grid;
+  grid-template-columns: 1fr;
+  list-style: none;
+  gap: 1rem;
+  margin: 0;
+  padding: 0;
+}
+
+@media screen and (min-width: 42rem) {
+  .video__related-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 60rem) {
+  .video__related-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (min-width: 72rem) {
+  .video {
+    grid-template-columns: minmax(0, 1fr) 400px;
+    grid-template-rows: repeat(5, auto);
+    grid-template-areas:
+      "player related"
+      "title related"
+      "details related"
+      "description related"
+      "comments related";
+  }
+
+  .video__related-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    row-gap: 0.75rem;
+    padding: 0;
+    margin: 0;
+  }
 }
 
 .video__player {
   width: 100%;
+  aspect-ratio: 16 / 9;
   grid-area: player;
 }
 
@@ -27,11 +70,12 @@
 }
 
 .video__details {
+  grid-area: details;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   column-gap: 2rem;
   margin-bottom: 1rem;
-  grid-area: details;
 }
 
 .video__channel {
@@ -136,32 +180,4 @@
 
 .video__related {
   grid-area: related;
-}
-
-.video__related-list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  row-gap: 1rem;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-@media screen and (min-width: 64rem) {
-  .video {
-    grid-template-columns: 3fr minmax(400px, 1fr);
-    grid-template-rows: repeat(5, auto);
-    grid-template-areas: 
-    "player related"
-    "title related"
-    "details related"
-    "description related"
-    "comments related";
-  }
-
-  .video__related-list {
-    row-gap: 0.75rem;
-  }
 }
